# TestAPP

./: CMakeLists.txt  README.md
src/: main.cpp
src/api/: test.cpp  test.h
src/math/: math.cpp  math.h
